--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -1,10 +1,27 @@
 .body-light{
     background-image: url(..//Images/white-wallpaper.jpg);
-    background-size: cover;
+    background-size: 100% auto;
+    background-repeat: repeat-y;
 }
 
 .body-dark{
     background-image: url(..//Images/black-wallpaper.jpg);
-    background-size: cover;
+    background-size: 100% auto;
+    background-repeat: repeat-y;
 
+
+}
+
+.body-light a{
+    text-decoration: none;
+    color: rgb(8, 8, 8);
+}
+
+.body-dark a{
+    text-decoration: none;
+    color: white;
+}
+
+a.active{
+    color: 	#FF5F1F;
 }
