Added footer and modified Nav

--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -12,6 +12,16 @@
 
 }
 
+.logo_img{
+    background-image: url(..//Images/Logo.png);
+    background-size: cover;
+}
+
+.login_img{
+    background-image: url(../Images/login.png);
+    background-size: cover;
+}
+
 .body-light a{
     text-decoration: none;
     color: rgb(8, 8, 8);
