Home page first draft

--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -18,7 +18,7 @@
 }
 
 .login_img{
-    background-image: url(../Images/login.png);
+    background-image: url("../Images/login.png");
     background-size: cover;
 }
 
